--- a/Chrono Tool/.classpath
+++ b/Chrono Tool/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry kind="lib" path="lib/sqlite-jdbc-3.14.2.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Tiago/workspace/Chrono Tool/lib/commons-io-2.5.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Tiago/workspace/Chrono Tool/lib/commons-io-2.5-javadoc.jar"/>
+	<classpathentry kind="lib" path="jgoodies-common-1.8.0.jar" sourcepath="jgoodies-common-1.8.0-sources.jar"/>
+	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
