--- a/Chrono Tool/.classpath
+++ b/Chrono Tool/.classpath
@@ -7,5 +7,21 @@
 	<classpathentry kind="lib" path="C:/Users/Tiago/workspace/Chrono Tool/lib/commons-io-2.5-javadoc.jar"/>
 	<classpathentry kind="lib" path="jgoodies-common-1.8.0.jar" sourcepath="jgoodies-common-1.8.0-sources.jar"/>
 	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tiago/workspace/Chrono Tool/lib/poi-3.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tiago/workspace/Chrono Tool/lib/poi-examples-3.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tiago/workspace/Chrono Tool/lib/poi-excelant-3.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tiago/workspace/Chrono Tool/lib/poi-ooxml-3.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tiago/workspace/Chrono Tool/lib/poi-ooxml-schemas-3.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tiago/workspace/Chrono Tool/lib/poi-scratchpad-3.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tiago/workspace/Chrono Tool/lib/poi-ooxml-3.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tiago/workspace/Chrono Tool/lib/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tiago/workspace/Chrono Tool/lib/commons-collections4-4.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tiago/workspace/Chrono Tool/lib/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tiago/workspace/Chrono Tool/lib/curvesapi-1.04.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tiago/workspace/Chrono Tool/lib/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tiago/workspace/Chrono Tool/lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tiago/workspace/Chrono Tool/lib/sqlite-jdbc-3.14.2.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tiago/workspace/Chrono Tool/lib/xmlbeans-2.3.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tiago/workspace/Chrono Tool/lib/xmlbeans-2.6.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
