Versão quase final
DONE:
- Tentar perceber como ler pdf e ppt/pptx;
- Aplicar a função de leitura de conteúdo a todas as ocasiões em que o
user procura por informações de um file (isto quase nem é um ponto pq ta
feito para uma é igual para as outras 2);
- Implementar a pesquisa por KeyWord em toda a Drive;
- Implementar a pesquisa por KeyWord em cada lista específica (ex:
permitir procurar por conteúdo apenas na listagem de todos os ficheiros
no path root/ist)

TO DO:
- Testar o programa com outras Drives e Skypes;
- Fazer um check geral da imagem da cada menu (ver o que falta, corrigir
o que está mal);
- Dependendo do tempo ver como melhorar a chrono tool do Drive;

--- a/Chrono Tool/.classpath
+++ b/Chrono Tool/.classpath
@@ -23,5 +23,6 @@
 	<classpathentry kind="lib" path="C:/Users/Tiago/workspace/Chrono Tool/lib/sqlite-jdbc-3.14.2.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Tiago/workspace/Chrono Tool/lib/xmlbeans-2.3.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Tiago/workspace/Chrono Tool/lib/xmlbeans-2.6.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tiago/workspace/Chrono Tool/lib/pdfbox-app-2.0.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
